--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ p {
   padding-bottom: 40%; }
   .video-container .play-video {
     position: absolute;
-    top: calc(33% + 50px);
+    top: calc(33% + 5vw);
     left: 50%;
     transform: translate(-50%, -50%);
     width: 12vw;
