--- a/style.scss
+++ b/style.scss
@@ -228,7 +228,7 @@ p {
 
   .play-video {
     position: absolute;
-    top: calc(33% + 50px);
+    top: calc(33% + 5vw);
     left: 50%;
     transform: translate(-50%, -50%);
     width: 12vw;
